; ModuleID = '/home/carl/AnghaBench/linux/drivers/block/extr_loop.c_loop_kthread_worker_fn.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/block/extr_loop.c_loop_kthread_worker_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@PF_LESS_THROTTLE = common dso_local global i32 0, align 4
@PF_MEMALLOC_NOIO = common dso_local global i32 0, align 4
@current = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @loop_kthread_worker_fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @loop_kthread_worker_fn(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @PF_LESS_THROTTLE, align 4
  %4 = load i32, i32* @PF_MEMALLOC_NOIO, align 4
  %5 = or i32 %3, %4
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = or i32 %8, %5
  store i32 %9, i32* %7, align 4
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 @kthread_worker_fn(i8* %10)
  ret i32 %11
}

declare dso_local i32 @kthread_worker_fn(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
